# HOSHINO-Blog

./: .dockerignore  .env.docker  .env.example  .gitignore  =4.0  Dockerfile  MYSQL_SETUP.md  README.md  _final.py  _fix_view_btn.py  app.py  config.py  docker-compose.yml  environment.yml  launcher.py  mysql_setup.sql  pyproject.toml  requirements.txt  seed_data.py  worker.py  追光组件.html
.playwright-mcp/: page-2026-07-21T16-42-25-764Z.yml  page-2026-07-21T16-44-16-608Z.yml  page-2026-07-21T16-58-18-137Z.yml
blog/: __init__.py  admin.py  apify_client.py  bestbuy_client.py  bili_public_routes.py  bili_routes.py  cache.py  crawler.py  exa_client.py  forms.py  keepa_client.py  logger.py  mail.py  models.py  price_routes.py  routes.py  task_queue.py  wordcloud.py
blog/bilibili/: __init__.py  bili_api.py  config.py  cookies.txt  login.py
docs/: ARCHITECTURE.md  CHANGELOG-2026-06-05.md  CHANGELOG-2026-06-09.md  CHANGELOG-2026-07-03.md  CHANGELOG-2026-07-06.md  CHANGELOG-2026-07-09.md  CHANGELOG-2026-07-12.md  CHANGELOG-2026-07-13.md  CHANGELOG-2026-07-14.md  CHANGELOG-2026-07-19.md  CHANGELOG-2026-07-20.md  CHANGELOG-2026-07-23.md  CHANGELOG.md  CHANGELOG_2026-06-30.md
migrations/versions/: b76f487c0ae9_initial_migration.py  (+1 more)
scripts/: bili_daily_scrape.py  bili_incremental.py  fix_timestamps.py  price_crawl.py
templates/: _sidebar.html  about.html  base.html  bilibili.html  bilibili_compare.html  bilibili_up.html  bilibili_video.html  category-grid.html  contact.html  html-post.html  index.html  message.html  rss.xml  single-post.html  tools.html
web/: index.html
(+52 files in other folders)
