[project]
name = "hoshino_blog"
version = "1.0.0"
description = "HOSHINO Blog - A Flask-based blog system"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N", "SIM", "PL"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
